# TarantuBench

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: tarantubench-v0.jsonl  tarantubench-v1.jsonl
eval/: README.md  harness.js  package.json  scorecard.js  validate-dataset.js
src/tarantubench/: __init__.py  compose.yaml  task.py
